k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartcity-energy-management-system
  labels:
    project: "Smart_Energy_Management"
