k8s/oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-server
  namespace: smartcity-energy-management-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-server
  template:
    metadata:
      labels:
        app: oauth-server
    spec:
      containers:
      - name: oauth-server
        image: smart-city-platform-oauth-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-server
  namespace: smartcity-energy-management-system
spec:
  selector:
    app: oauth-server
  ports:
    - port: 3002
      targetPort: 3002
