k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartcity-ingress
  namespace: smartcity-energy-management-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: smartcity.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 3060
      - path: /ml
        pathType: Prefix
        backend:
          service:
            name: python-ml
            port:
              number: 5000
